# clitunes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  e2e.yml  release.yml  rust-clippy.yml
crates/clitunes/: Cargo.toml
crates/clitunes-core/: Cargo.toml
crates/clitunes-core/src/: browse.rs  lib.rs  now_playing.rs  pcm.rs  state.rs  station.rs  track.rs  untrusted_string.rs  visualiser.rs
crates/clitunes-engine/: Cargo.toml
crates/clitunes-engine/examples/: layout_compact.toml  layout_default.toml  layout_fullscreen.toml  layout_minimal.toml  layout_pure.toml
crates/clitunes-engine/src/: lib.rs  observability.rs
crates/clitunes-engine/src/audio/: cpal_output.rs  fft_tap.rs  mod.rs  ring.rs  tone.rs
crates/clitunes-engine/src/daemon/: config.rs  event_loop.rs  idle_timer.rs  lifecycle.rs  log_rotate.rs  mod.rs  peercred.rs  singleton.rs  socket_security.rs  tee_writer.rs
crates/clitunes-engine/src/layout/: mod.rs  parser.rs  resize_ladder.rs  tree.rs
crates/clitunes-engine/src/pcm/: cross_process_api.rs  mod.rs  spmc_ring.rs
crates/clitunes-engine/src/proto/: banner.rs  client.rs  codec.rs  events.rs  mod.rs  server.rs  verbs.rs
crates/clitunes-engine/src/sources/: mod.rs  symphonia_decode.rs  tone_source.rs
crates/clitunes-engine/src/sources/local/: folder_scan.rs  mod.rs  queue.rs
crates/clitunes-engine/src/sources/radio/: discovery.rs  icy_media_source.rs  icy_stream.rs  mod.rs  station_db.rs  streamer.rs
crates/clitunes-engine/src/sources/spotify/: auth.rs  connect.rs  handle.rs  mod.rs  sink.rs  token.rs  webapi.rs
crates/clitunes-engine/src/tui/: album_art.rs  mod.rs  persistence.rs  text.rs
crates/clitunes-engine/src/tui/components/: mod.rs  now_playing.rs  panel.rs  status_line.rs
crates/clitunes-engine/src/tui/micro/: breathing.rs  error_pulse.rs  mod.rs  quit_fade.rs  shimmer.rs  volume_overlay.rs
crates/clitunes-engine/src/tui/picker/: curated_seed.rs  mod.rs  paint.rs  state.rs
crates/clitunes-engine/src/tui/theme/: loader.rs  mod.rs  tokens.rs
crates/clitunes-engine/src/tui/transition/: blend.rs  easing.rs  mod.rs
crates/clitunes-engine/src/visualiser/: ansi_writer.rs  auralis.rs  auralis.wgsl  bars_dot.rs  bars_outline.rs  binary.rs  braille.rs  butterfly.rs  cell_grid.rs  classic_peak.rs  density_ramp.rs  energy.rs  fire.rs  firework.rs  heartbeat.rs  kitty_writer.rs  matrix.rs  metaballs.rs  mod.rs  moire.rs  palette.rs  plasma.rs  pulse.rs  rain.rs  retro.rs  ripples.rs  sakura.rs  scaling.rs  scatter.rs  scope.rs  starfield.rs  terrain.rs  tideline.rs  tunnel.rs  vortex.rs  wave.rs  wgpu_runtime.rs
crates/clitunes-engine/src/visualiser/cascade/: colormap.rs  history.rs  mod.rs
crates/clitunes-engine/tests/: audio_cpal_output_tests.rs  daemon_singleton_tests.rs  daemon_socket_security_tests.rs  layout_parser_tests.rs  layout_resize_ladder_tests.rs  pcm_cross_process_api_tests.rs  pcm_spmc_ring_cross_process.rs  pcm_spmc_ring_loom.rs  proto_server_tests.rs  sources_radio_discovery_tests.rs  sources_radio_icy_fuzz_tests.rs  sources_radio_station_db_tests.rs  spotify_webapi_integration.rs  visualiser_cascade_tests.rs
crates/clitunes-spike/: Cargo.toml
crates/clitunes-spike/src/: kitty_writer.rs  main.rs  shader.wgsl  wgpu_pipeline.rs
crates/clitunes/src/: auto_spawn.rs  lib.rs  main.rs
crates/clitunes/src/client/: command_bar.rs  control_session.rs  fuzzy.rs  headless.rs  mod.rs  pane_mode.rs  reconnect.rs  render_loop.rs  status_json.rs  transition_controller.rs
crates/clitunes/tests/: auto_spawn_tests.rs  client_reconnect_tests.rs  control_session_tests.rs
crates/clitunesd/: Cargo.toml
crates/clitunesd/src/: main.rs
docs/: backlog.md  protocol.md  security.md
docs/brainstorms/: clitunes-requirements.md
docs/conventions/: logging.md
docs/handover/: 2026-04-11-slice1-complete-pickup.md
docs/plans/: 2026-04-11-001-feat-clitunes-v1-implementation-plan.md
docs/spikes/: 2026-04-11-spmc-pcm-ring-spike.md  2026-04-11-wgpu-kitty-throughput-spike.md
guide/: README.md
guide/explanation/: architecture.md  source-priority.md  visualisers.md
guide/how-to/: browse-spotify.md  customise-stations.md  embed-panes.md  play-local-files.md  play-spotify.md  spotify-connect.md
guide/reference/: cli.md  control-bus.md  daemon-config.md  security.md  spotify-integration-test.md
guide/tutorials/: getting-started.md
tests/e2e/: run.sh
tests/e2e/lib/: assertions.sh
tests/e2e/scenarios/: 01_slice1_calibration.sh  02_headless_play_pause.sh  03_source_switch_radio.sh  04_source_local_file.sh  05_idle_shutdown.sh  06_multi_client.sh  07_spotify_search.sh  08_headless_auth.sh
