[workspace]
resolver = "2"
members = [
    "crates/clitunes-core",
    "crates/clitunes-engine",
    "crates/clitunes",
    "crates/clitunesd",
]
# clitunes-spike is Phase 0 wgpu→Kitty throughput investigation code, superseded
# by the slice-2 CPU CellGrid+AnsiWriter rewrite. Kept in-tree for historical
# reference but excluded from the workspace so CI doesn't lint or build it.
exclude = ["crates/clitunes-spike"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["clitunes contributors"]
repository = "https://github.com/coin/clitunes"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
base64 = "0.22"
cpal = "0.15"
realfft = "3"
ratatui = "0.29"
crossterm = "0.28"
libc = "0.2"
parking_lot = "0.12"

# Networking + async (Slice 2: radio source).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "net"] }
dirs = "5"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Atomic file writes (Slice 2 Unit 8). Used for state.toml so a crash
# mid-write can't leave a truncated / corrupt file on disk.
tempfile = "3"

# Audio decoding (Slice 2 Unit 7). Pure-Rust, no ffmpeg/native deps.
# Default features already cover FLAC/Vorbis/OGG/WAV/PCM/MKV; we add mp3 + aac + isomp4
# for the typical MP3 icecast/AAC-HE Shoutcast stream and M4A radio mirrors.
symphonia = { version = "0.5.5", features = ["mp3", "aac", "isomp4"] }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
strip = "none"

[profile.dev]
opt-level = 1
