[workspace]
resolver = "2"
members = [
    "crates/clitunes-core",
    "crates/clitunes-engine",
    "crates/clitunes",
    "crates/clitunesd",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["clitunes contributors"]
repository = "https://github.com/vxcozy/clitunes"
version = "1.2.0"
keywords = ["music", "radio", "visualizer", "terminal", "tui"]
categories = ["command-line-utilities", "multimedia::audio"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
base64 = "0.22"
cpal = "0.15"
realfft = "3"
ratatui = "0.30"
crossterm = "0.28"
libc = "0.2"
parking_lot = "0.12"

# Networking + async (Slice 2: radio source).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "net"] }
dirs = "5"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Loom model checker for lock-free data structures (Unit 11A SPMC ring spike).
loom = "0.7"

# Atomic file writes (Slice 2 Unit 8). Used for state.toml so a crash
# mid-write can't leave a truncated / corrupt file on disk.
tempfile = "3"

# Audio decoding (Slice 2 Unit 7). Pure-Rust, no ffmpeg/native deps.
# Default features already cover FLAC/Vorbis/OGG/WAV/PCM/MKV; we add mp3 + aac + isomp4
# for the typical MP3 icecast/AAC-HE Shoutcast stream and M4A radio mirrors.
symphonia = { version = "0.5.5", features = ["mp3", "aac", "isomp4"] }

# Local file playback (Slice 4 Unit 14). Tag reading + recursive folder scan.
lofty = "0.22"
walkdir = "2"

# Spotify playback (v1.1). librespot is a reverse-engineered Spotify client
# (MIT licensed, Premium only). rubato provides high-quality sinc resampling
# for the 44100→48000 Hz bridge.
librespot-core = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-playback = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-metadata = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-oauth = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
# Spotify Connect receiver (v1.2). librespot-connect runs the Spirc
# state machine; librespot-discovery serves the `/addUser` HTTP endpoint
# and advertises the device via mDNS. `with-libmdns` picks the pure-Rust
# mDNS backend — no system libraries (dns-sd/avahi) required, keeps D15
# straightforward across Linux and macOS.
librespot-connect = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-discovery = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots", "with-libmdns"] }
sha1 = "0.10"
rubato = "2"

# Spotify Web API (v1.2). rspotify wraps the REST endpoints for search,
# library, and playlist browsing. Default TLS disabled — we use rustls
# to stay consistent with the rest of the workspace.
rspotify = { version = "0.16", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Album art decoding (v1.2). The `image` crate decodes JPEG/PNG covers
# fetched from Spotify's CDN. Client-only — daemon never touches images (D15).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Pin librespot crates to a specific dev-branch commit. The 0.8.0 crates.io
# release has a vergen-gitcl build-script conflict (rustyhorde/vergen#478);
# dev has the fix plus 13 other legitimate upstream commits (bug fixes +
# additive API — see CHANGELOG Known Limitations for the audit). Reviewed
# the full diff v0.8.0...33bf3a7 before pinning for v1.0.0.
# Remove this patch block when librespot cuts 0.8.1 on crates.io.
[patch.crates-io]
librespot-core      = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }
librespot-playback  = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }
librespot-metadata  = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }
librespot-oauth     = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }
librespot-connect   = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }
librespot-discovery = { git = "https://github.com/librespot-org/librespot", rev = "33bf3a77ed4b549df67e8347d7d6e55b007b3ec2" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
strip = "none"

[profile.dev]
opt-level = 1
