[package]
name = "clitunes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "clitunes core types — pure, no I/O, no feature gates."

[dependencies]
serde.workspace = true
thiserror.workspace = true
