[package]
name = "clitunes-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "clitunes engine: audio, sources, visualiser, tui, layout, control — feature-gated."

[features]
default = ["audio", "sources", "visualiser", "tui", "control", "layout"]

# Feature boundaries preserve the daemon-must-not-depend-on-visualiser invariant (D15).
# The clitunesd binary declares `default-features = false, features = ["audio", "control", "sources"]`.
audio = ["dep:cpal", "dep:realfft"]
sources = ["audio"]
control = []
visualiser = ["audio", "dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:base64"]
tui = ["dep:ratatui", "dep:crossterm"]
layout = ["tui"]

[dependencies]
clitunes-core = { path = "../clitunes-core" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
libc.workspace = true

cpal = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }

wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
