[package]
name = "clitunes-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "clitunes engine: audio, sources, visualiser, tui, layout, control — feature-gated."

[features]
default = ["audio", "sources", "radio", "decode", "visualiser", "tui", "control", "layout"]

# Feature boundaries preserve the daemon-must-not-depend-on-visualiser invariant (D15).
# The clitunesd binary declares `default-features = false, features = ["audio", "control", "sources", "radio", "decode"]`.
audio = ["dep:cpal", "dep:realfft"]
sources = ["audio"]
# Radio source: discovery + station lookup + reqwest streaming. Pulled in by
# the daemon (no GPU/TUI deps), kept off the spike binary unless asked.
radio = [
    "sources",
    "dep:reqwest",
    "dep:hickory-resolver",
    "dep:tokio",
    "dep:bytes",
    "dep:futures-util",
]
# Symphonia decoder. Gated so the spike binary and any future tooling that
# only wants the parser / ring / tone source doesn't pull symphonia in.
decode = ["audio", "dep:symphonia"]
control = []
# Daemon runtime: fork/detach, flock singleton, idle-exit timer, log rotation.
# Gated so clitunesd picks it up (D15-safe: no wgpu/ratatui/crossterm) while the
# spike binary or any future audio-only tool can omit it.
daemon = ["control"]
# Pure-CPU truecolor ANSI cell grid + half-block renderer. No GPU deps; the
# wgpu+Kitty pipeline was replaced after slice 1 because per-frame readback
# and base64 transmission dominated CPU and battery.
visualiser = ["audio"]
tui = ["dep:ratatui", "dep:crossterm"]
layout = ["tui"]

[dependencies]
clitunes-core = { path = "../clitunes-core" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
libc.workspace = true
dirs.workspace = true
tempfile.workspace = true

cpal = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }

ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# Radio feature deps.
reqwest = { workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

symphonia = { workspace = true, optional = true }
