[package]
name = "clitunes-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "clitunes engine: audio, sources, visualiser, tui, layout, control — feature-gated."

[features]
default = ["audio", "sources", "radio", "decode", "local", "visualiser", "tui", "control", "layout"]

# Feature boundaries preserve the daemon-must-not-depend-on-visualiser invariant (D15).
# The clitunesd binary declares `default-features = false, features = ["audio", "control", "sources", "radio", "decode"]`.
audio = ["dep:cpal", "dep:realfft"]
sources = ["audio"]
# Radio source: discovery + station lookup + reqwest streaming. Pulled in by
# the daemon (no GPU/TUI deps), kept off the spike binary unless asked.
radio = [
    "sources",
    "dep:reqwest",
    "dep:hickory-resolver",
    "dep:tokio",
    "dep:bytes",
    "dep:futures-util",
]
# Symphonia decoder. Gated so the spike binary and any future tooling that
# only wants the parser / ring / tone source doesn't pull symphonia in.
decode = ["audio", "dep:symphonia"]
# Local file playback (Slice 4 Unit 14). Recursive folder scan + tag reading.
local = ["sources", "decode", "dep:lofty", "dep:walkdir"]
# Spotify playback via librespot (v1.1). Requires `radio` because
# event_loop.rs unconditionally imports RadioSource and the daemon module
# gate is cfg(all(feature = "audio", feature = "radio", feature = "decode")).
spotify = [
    "radio",
    "sources",
    "decode",
    "dep:librespot-core",
    "dep:librespot-playback",
    "dep:librespot-metadata",
    "dep:librespot-oauth",
    "dep:rubato",
]
# Spotify Connect receiver (v1.2). Opt-in; default build does not ship it.
# Pulls librespot-connect (Spirc state machine) and librespot-discovery
# (mDNS + /addUser endpoint, pure-Rust libmdns backend). D15-safe: no
# TUI/GPU/image deps; verified by the d15-connect CI job.
connect = [
    "spotify",
    "dep:librespot-connect",
    "dep:librespot-discovery",
]
# Spotify Web API: search, library, playlists via rspotify. Daemon-safe
# (no image/TUI deps). Requires `spotify` for shared auth infrastructure.
webapi = ["spotify", "dep:rspotify", "dep:chrono"]
# Album art decoding + CDN fetch. Client-only — daemon must NOT enable
# this feature (D15). reqwest is already in the dep graph via `radio`;
# the `image` crate is the new dependency.
album-art = ["dep:image"]
control = ["dep:tokio", "dep:tokio-util", "dep:futures-util"]
# Daemon runtime: fork/detach, flock singleton, idle-exit timer, log rotation.
# Gated so clitunesd picks it up (D15-safe: no wgpu/ratatui/crossterm) while the
# spike binary or any future audio-only tool can omit it.
daemon = ["control"]
# Pure-CPU truecolor ANSI cell grid + half-block renderer. No GPU deps; the
# wgpu+Kitty pipeline was replaced after slice 1 because per-frame readback
# and base64 transmission dominated CPU and battery.
visualiser = ["audio"]
tui = ["dep:ratatui", "dep:crossterm"]
layout = ["tui"]

[dependencies]
clitunes-core = { path = "../clitunes-core" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
parking_lot.workspace = true
libc.workspace = true
dirs.workspace = true
tempfile.workspace = true

cpal = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }

ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# Radio feature deps.
reqwest = { workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

symphonia = { workspace = true, optional = true }

lofty = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

# Spotify feature deps (v1.1).
librespot-core = { workspace = true, optional = true }
librespot-playback = { workspace = true, optional = true }
librespot-metadata = { workspace = true, optional = true }
librespot-oauth = { workspace = true, optional = true }
librespot-connect = { workspace = true, optional = true }
librespot-discovery = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }

# Spotify Web API (v1.2 webapi feature).
rspotify = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

# Album art decoding (v1.2 album-art feature). Client-only (D15).
image = { workspace = true, optional = true }

# Control bus (Unit 10). LinesCodec for line-delimited JSON framing.
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
loom = { workspace = true }
