[package]
name = "clitunes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "clitunes — the Ghostty of TUI music apps."

[lib]
name = "clitunes"
path = "src/lib.rs"

[[bin]]
name = "clitunes"
path = "src/main.rs"

[dependencies]
clitunes-core = { path = "../clitunes-core" }
clitunes-engine = { path = "../clitunes-engine", default-features = false, features = [
    "audio",
    "sources",
    "radio",
    "decode",
    "visualiser",
    "control",
    "daemon",
] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
