[package]
name = "clitunesd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "clitunes daemon — audio/sources/control only. D15: no wgpu, ratatui, or crossterm."

[[bin]]
name = "clitunesd"
path = "src/main.rs"

[dependencies]
clitunes-core = { path = "../clitunes-core" }
clitunes-engine = { path = "../clitunes-engine", default-features = false, features = [
    "audio",
    "sources",
    "radio",
    "decode",
    "local",
    "spotify",
    "control",
    "daemon",
] }

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
